<resources>
    <string name="app_name">Proyecto DAMI</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="strUsuario">Usuario</string>
    <string name="strPassword">Password</string>
    <string name="strEntrar">Entrar</string>

    <string name="title_activity_opciones">OpcionesActivity</string>
    <string name="title_activity_importar">ImportarActivity</string>
    <string name="title_activity_exportar">ExportarActivity</string>
    <string name="title_activity_registrar_notas">RegistrarNotasActivity</string>

    <string name="strImportar">Importar Notas</string>
    <string name="strRegistrar">Registrar Notas</string>
    <string name="strExportar">Exportar Notas</string>

    <string name="strModalidadImportar">Modalidad</string>
    <string name="strCicloImportar">Ciclo</string>
    <string name="strImportarImportar">\uf0ed Importar</string>

    <string name="strModalidad">Modelidad de Estudio : </string>
    <string name="strPreIngreso">PreIngreso de Notas. </string>
    <string name="strIngresoDescripcion">Permite el preingreso de las notas de los alumnos.</string>
    <string name="strCiclo">Ciclo Académico : </string>
    <string name="strProfesor">Profesor:</string>
    <string name="strAsignatura">Asignatura:</string>    
    <string name="strSeccion">Sección:</string>
    <string name="strGrupo">Grupo:</string>
    <string name="strTipo">Tipo de Prueba:</string>
    <string name="strNumero">Nro. de Prueba:</string>
    
    
    

</resources>
