<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.romario.proyectoa.RegistrarNotasActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/strModalidad"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/tableLayout"
        android:layout_alignStart="@+id/tableLayout"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp" />

    <Spinner
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_marginLeft="147dp"
        android:layout_marginStart="147dp"
        android:layout_alignTop="@+id/textView3"
        android:layout_toRightOf="@+id/textView3"
        android:layout_toEndOf="@+id/textView3" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/spinner"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"></TableRow>
            </TableRow>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/strPreIngreso"
                    android:id="@+id/textView4" />

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"></TableRow>
                </TableRow>

            </TableRow>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="17dp"></TableRow>
            </TableRow>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/strIngresoDescripcion"
                android:id="@+id/textView5"
                android:layout_column="0" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
